fixed login-page not showing in grocery and cart webpage issue

--- a/stylesheets/cart.css
+++ b/stylesheets/cart.css
@@ -158,7 +158,7 @@ footer span+span a {
     }
 
     footer {
-        height: 20rem;
+        height: 14rem;
     }
 }
 
@@ -183,7 +183,7 @@ footer span+span a {
     }
 
     footer {
-        height: 21rem;
+        height: 14rem;
     }
 }
 
@@ -207,7 +207,7 @@ footer span+span a {
     }
 
     footer {
-        height: 22rem;
+        height: 18rem;
     }
 }
 
@@ -233,6 +233,6 @@ footer span+span a {
     }
 
     footer {
-        height: 21rem;
+        height: 20rem;
     }
 }
